[gd_scene load_steps=3 format=3 uid="uid://c0ai4tbdxqp4v"]

[ext_resource type="Texture2D" uid="uid://cewt7l4igm2u0" path="res://Assets/background/luna-krasivo-foto.jpg" id="1_126co"]
[ext_resource type="Script" path="res://Scene/Main_menu/settings_menu.gd" id="1_xvyrh"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvyrh")

[node name="BackMainMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_126co")
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(80, 240)
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="DisplayMode" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="LabelDisplayMode" type="Label" parent="MarginContainer/HBoxContainer/DisplayMode"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Режим отображения
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DisplayMode1" type="Button" parent="MarginContainer/HBoxContainer/DisplayMode"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "Полноэкранный
"

[node name="DisplayMode2" type="Button" parent="MarginContainer/HBoxContainer/DisplayMode"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "Оконный"

[node name="DisplayMode3" type="Button" parent="MarginContainer/HBoxContainer/DisplayMode"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Окно без рамки"

[node name="Resolution" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="LabelResolution" type="Label" parent="MarginContainer/HBoxContainer/Resolution"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Разрешение экрана"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resoluton1" type="Button" parent="MarginContainer/HBoxContainer/Resolution"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "1280x720"

[node name="Resoluton2" type="Button" parent="MarginContainer/HBoxContainer/Resolution"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "1920x1080"

[node name="Resoluton3" type="Button" parent="MarginContainer/HBoxContainer/Resolution"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "2560x1440"

[node name="Sound" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="LabelSound" type="Label" parent="MarginContainer/HBoxContainer/Sound"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Звук"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundYes" type="Button" parent="MarginContainer/HBoxContainer/Sound"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "Включить"

[node name="NoVisible" type="Button" parent="MarginContainer/HBoxContainer/Sound"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Новая игра"

[node name="SoundNo" type="Button" parent="MarginContainer/HBoxContainer/Sound"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "Выключить"

[node name="Difficulty" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="LabelDifficulty" type="Label" parent="MarginContainer/HBoxContainer/Difficulty"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Сложность
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyEasy" type="Button" parent="MarginContainer/HBoxContainer/Difficulty"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "Легкая"

[node name="DifficultyNormal" type="Button" parent="MarginContainer/HBoxContainer/Difficulty"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 16
text = "Средняя"

[node name="DifficultyHard" type="Button" parent="MarginContainer/HBoxContainer/Difficulty"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Сложная"

[node name="SettingsExit" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "назад
"

[connection signal="pressed" from="MarginContainer/HBoxContainer/DisplayMode/DisplayMode1" to="." method="_on_display_mode_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DisplayMode/DisplayMode2" to="." method="_on_display_mode_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DisplayMode/DisplayMode3" to="." method="_on_display_mode_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Resolution/Resoluton1" to="." method="_on_resoluton_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SettingsExit" to="." method="_on_settings_exit_pressed"]
